petclinic-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deploy
  namespace: pipelines
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 3
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: >-
            image-registry.openshift-image-registry.svc:5000/pipelines/petclinic:28fcd6a1701f461ff25e1b21164782a09440d475
          ports:
            - containerPort: 8080
