petclinic-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: pipelines
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
